Add authorization with role and permission