@@ -2,22 +2,21 @@ package com.study.springboot.service;
 
 import java.util.HashSet;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
 import org.springframework.security.access.prepost.PostAuthorize;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.security.core.context.SecurityContextHolder;
-import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
 import com.study.springboot.dto.request.UserCreationRequest;
 import com.study.springboot.dto.request.UserUpdateRequest;
 import com.study.springboot.entity.User;
-import com.study.springboot.enums.Role;
 import com.study.springboot.exception.AppException;
 import com.study.springboot.exception.ErrorCode;
 import com.study.springboot.mapper.UserMapper;
+import com.study.springboot.repository.RoleRepository;
 import com.study.springboot.repository.UserRepository;
 import com.study.springboot.response.UserResponse;
 
@@ -31,18 +30,19 @@ import lombok.experimental.FieldDefaults;
 public class UserService {
     UserRepository userRepository;
     UserMapper userMapper;
+    RoleRepository roleRepository;
+    PasswordEncoder passwordEncoder;
 
+    @PreAuthorize("hasAuthority('CREATE_DATA')")
     public UserResponse createUser(UserCreationRequest request) {
         if (userRepository.existsByUsername(request.getUsername()))
             throw new AppException(ErrorCode.USER_EXISTED);
 
         User user = userMapper.toUser(request);
-        PasswordEncoder passwordEncoder = new BCryptPasswordEncoder(10);
         user.setPassword(passwordEncoder.encode(request.getPassword()));
 
-        HashSet<String> roles = new HashSet<String>();
-        roles.add(Role.USER.name());
-        user.setRoles(roles);
+        // var roles = new HashSet<>(roles);
+        // user.setRoles()
 
         return userMapper.toUserResponse(userRepository.save(user));
     }
@@ -56,22 +56,24 @@ public class UserService {
         return userMapper.toUserResponse(uswer);
     }
 
+    @PostAuthorize("returnObject.username == authentication.name")
     public UserResponse updateUser(String userId, UserUpdateRequest request) {
         User user = userRepository.findById(userId)
             .orElseThrow(() -> new RuntimeException("User not found"));
         userMapper.updateUser(user, request);
+        var roles = roleRepository.findAllById(request.getRoles());
+        user.setRoles(new HashSet<>(roles));
         return userMapper.toUserResponse(userRepository.save(user));
     }
 
+    @PreAuthorize("hasAuthority('DELETE_DATA')")
     public void deleteUser(String userId){
         userRepository.deleteById(userId);
     }
 
     @PreAuthorize("hasRole('ADMIN')")
     public List<UserResponse> getUsers(){
-        return userRepository.findAll().stream()
-        .map(user -> userMapper.toUserResponse(user))
-        .collect(Collectors.toList());
+        return userRepository.findAll().stream().map(userMapper::toUserResponse).toList();
     }
 
     @PostAuthorize("returnObject.username == authentication.name")
